[package]
name = "glowworm"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true

[dependencies]
serialport = "4.3.0"
serde_json = "1.0.116"
serde = { version = "1.0.201", features = ["derive"] }
wayland-protocols-wlr = { version = "0.3.4", features = ["client"] }
wayland-client = "0.31.6"
wayland-protocols = { version = "0.32.4", features = [
  "client",
  "wayland-client",
] }
drm-fourcc = "2.2.0"
drm = "0.14.0"
nix = { version = "0.29.0", features = ["fs", "mman"] }
gbm = "0.18.0"
memmap = "0.7.0"
